--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Alex Zoellner] | Journalist and Marketing Agent</title>
+    <title>[Alex Zoellner]/title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[Alex Zoellner], [Journalist], [Marketing Agent]" />
     <!-- Todo: improve your SEO by adding a small description of you -->
