--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[Alex Zoellner], [Journalist], [Marketing Agent]" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Alex Zoellner] | Journalist and Marketing Agent" />
+    <meta name="description" content="[Alex Zoellner]" />
 
     <link
       rel="stylesheet"
