--- a/src/index.html
+++ b/src/index.html
@@ -144,17 +144,17 @@
         </div>
         <!-- /END Articles Project -->
 
-        <!-- **** Social Media Project **** -->
+        <!-- **** Marketing Portfolio Project **** -->
         <div class="project-wrapper">
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Social Media</h3>
+                <h3 class="project-wrapper__text-title">Marketing Portfolio</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    Explore comprehensive marketing campaigns and social media strategies developed for diverse clients. 
+                    From startup brand positioning to restaurant social presence, see how strategic content creation 
+                    drives engagement, growth, and measurable business results across different industries.
                   </p>
                 </div>
                 <a
@@ -162,7 +162,7 @@
                   class="cta-btn cta-btn--hero"
                   href="socialmediagallery.html"
                 >
-                  View Full Gallery <i class="fa fa-arrow-right"></i>
+                  View Client Work <i class="fa fa-arrow-right"></i>
                 </a>
               </div>
             </div>
