--- a/src/client-detail.html
+++ b/src/client-detail.html
@@ -1010,6 +1010,10 @@
           grid-template-columns: 1fr;
           gap: 2rem;
         }
+
+        .client-header-main {
+          min-height: auto;
+        }
         
         .client-logo-section {
           text-align: center;
@@ -1029,6 +1033,19 @@
         .client-meta {
           flex-direction: column;
           gap: 1rem;
+        }
+
+        .portfolio-carousel-container {
+          max-width: 100%;
+          padding: 0 1rem;
+        }
+
+        .portfolio-carousel {
+          padding-left: 0;
+          padding-right: 0;
+          margin-left: 0;
+          margin-right: 0;
+          overflow: visible;
         }
         
         .portfolio-item {
