--- a/src/client-detail.html
+++ b/src/client-detail.html
@@ -1068,6 +1068,11 @@
           max-width: 100%;
           padding: 0 1rem;
         }
+
+        .portfolio-item:hover {
+          transform: none;
+          overflow: hidden;
+        }
         
         .carousel-indicators {
           margin: 0 0.5rem;
