--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="hero-overlay"></div>
       <div class="container">
-        <h1 class="hero-title">
-          Hi, I'm <span class="text-color-main">Alexandra Zoellner</span>
-          <br />
-          Journalist and Marketing Agent.
-        </h1>
+        <div class="hero-image-wrapper">
+          <img src="./assets/alex_cover.png" alt="Alex Zoellner" class="hero-cover-image" />
+        </div>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
             >Know more</a
@@ -188,11 +186,11 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Alex.Zoellner@gmail.com</p>
+          <p class="contact-wrapper__text">Alex.Zoellner10@gmail.com</p>
           <a
             rel="noreferrer"
             class="cta-btn cta-btn--resume"
-            href="mailto:Alex.Zoellner@gmail.com"
+            href="mailto:Alex.Zoellner10@gmail.com"
             >Email Me</a
           >
         </div>
