--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,7 @@
           <img src="./assets/alex_cover.png" alt="Alex Zoellner" class="hero-cover-image" />
         </div>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
-          >
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about">Know more</a>
         </p>
       </div>
     </section>
