entering descriptions and quick updates

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/profile_new.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -75,11 +75,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                Hey there! I’m Alex Zoellner, an eager, driven communicator living at the intersection of marketing, journalism, and storytelling. I believe great stories move people, build brands, and sometimes even change the game. Throw in a little sports, and I’m right at home.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Can’t wait for you to explore my work and connect.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -109,12 +108,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Articles</h3>
+                <h3 class="project-wrapper__text-title">Writing</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    Cut my teeth as Rockhurst University’s Editor-in-Chief, now freelance writing across KC. Here’s a collection of my work.
                   </p>
                 </div>
                 <a
@@ -122,7 +119,7 @@
                   class="cta-btn cta-btn--hero"
                   href="articlesgallery.html"
                 >
-                  View Full Gallery <i class="fa fa-arrow-right"></i>
+                  View Portfolio <i class="fa fa-arrow-right"></i>
                 </a>
               </div>
             </div>
@@ -144,12 +141,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Marketing Portfolio</h3>
+                <h3 class="project-wrapper__text-title">Marketing</h3>
                 <div>
                   <p class="mb-4">
-                    Explore comprehensive marketing campaigns and social media strategies developed for diverse clients. 
-                    From startup brand positioning to restaurant social presence, see how strategic content creation 
-                    drives engagement, growth, and measurable business results across different industries.
+                    Let’s tell your brand’s story the way all us kids know best — through social media. Check out some brands I’ve helped bring to life.
                   </p>
                 </div>
                 <a
