changing color scheme

--- a/src/socialmediagallery.html
+++ b/src/socialmediagallery.html
@@ -23,7 +23,7 @@
     <section id="clients-gallery">
       <div class="container">
         <h2 class="section-title dark-blue-text">Marketing Portfolio</h2>
-        <p class="section-subtitle">Explore our client success stories and see how we've helped businesses grow through strategic marketing and social media.</p>
+        <p class="section-subtitle">Let’s tell your brand’s story the way all us kids know best — through social media. Check out some brands I’ve helped bring to life</p>
         <div class="gallery-grid" id="clients-container">
           <!-- Client cards injected by JS -->
         </div>
